# ChangeLog for x11-plugins/gkrellmms
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellmms/Attic/ChangeLog,v 1.39 2005/04/07 17:09:00 blubb Exp $

  07 Apr 2005; Simon Stelling <blubb@gentoo.org> gkrellmms-2.1.21.ebuild:
  stable on amd64

  30 Mar 2005; Gustavo Zacarias <gustavoz@gentoo.org> gkrellmms-2.1.21.ebuild:
  Stable on sparc

  28 Mar 2005; Martin Holzer <mholzer@gentoo.org> gkrellmms-2.1.21.ebuild:
  x86 stable.

*gkrellmms-2.1.21 (02 Jan 2005)

  02 Jan 2005; Martin Holzer <mholzer@gentoo.org> +gkrellmms-2.1.21.ebuild:
  Version bumped. Closes 74001

  14 Nov 2004; Bryan Ãstergaard <kloeri@gentoo.org>
  gkrellmms-2.1.15.ebuild:
  Stable on alpha.

  08 Aug 2004; Tom Martin <slarti@gentoo.org> gkrellmms-0.5.6.ebuild,
  gkrellmms-0.5.8.ebuild:
  Typo in DESCRIPTION: controll -> control. Bug 59717.

*gkrellmms-2.1.20 (01 Jun 2004)

  01 Jun 2004; Martin Holzer <mholzer@gentoo.org> gkrellmms-2.1.20.ebuild:
  Version bumped. Closes 51471

*gkrellmms-2.1.19 (09 May 2004)

  09 May 2004; Martin Holzer <mholzer@gentoo.org> gkrellmms-2.1.19.ebuild:
  Version bumped. Closes 49915

*gkrellmms-2.1.18 (08 May 2004)

  08 May 2004; Martin Holzer <mholzer@gentoo.org> gkrellmms-2.1.15.ebuild,
  gkrellmms-2.1.17.ebuild, gkrellmms-2.1.18.ebuild:
  Version bumped. Added missing IUSE.

*gkrellmms-2.1.17 (02 May 2004)

  02 May 2004; Martin Holzer <mholzer@gentoo.org> gkrellmms-2.1.17.ebuild:
  verison bumped. closes 49605

  29 Apr 2004; Jason Wever <weeve@gentoo.org> gkrellmms-2.1.15.ebuild:
  Stable on sparc.

*gkrellmms-2.1.16 (17 Apr 2004)

  17 Apr 2004; Martin Holzer <mholzer@gentoo.org> gkrellmms-2.1.16.ebuild:
  Version bumped. Closes 45762

  17 Apr 2004; Daniel Ahlberg <aliz@gentoo.org> gkrellmms-2.1.15.ebuild:
  Added IUSE, stable on x86 and amd64.

  12 Apr 2004; Daniel Ahlberg <aliz@gentoo.org> gkrellmms-2.1.14.ebuild:
  Stable on x86 and amd64, adding IUSE.
