@@ -1,6 +1,9 @@
 # ChangeLog for x11-plugins/gkrellmms
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellmms/Attic/ChangeLog,v 1.39 2005/04/07 17:09:00 blubb Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellmms/Attic/ChangeLog,v 1.40 2005/04/27 20:07:11 herbs Exp $
+
+  27 Apr 2005; Herbie Hopkins <herbs@gentoo.org> gkrellmms-2.1.21.ebuild:
+  multilib fixes
 
   07 Apr 2005; Simon Stelling <blubb@gentoo.org> gkrellmms-2.1.21.ebuild:
   stable on amd64
